--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-dice",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://realg701.github.io/",
+  "homepage": "https://realg701.github.io/react-dice/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
